# wiki-veloz

./: .cspell.json  .cursorrules  .eslintrc.js  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  ANALYTICS_GUIDE.md  BACKUP_COMPLETO_PROJETO.md  CREDENCIAIS_GOOGLE_DRIVE.md  CREDENCIAIS_USUARIOS.md  DEPLOY_RAILWAY.md  DIAGNOSTICO_LISTAGEM_USUARIOS.md  DOCUMENTOS_CORPORATIONS.md  DOCUMENTOS_CORPORATIVOS.md  Dockerfile  EXTENSOES_GUIDE.md  FIBRA_OPTICA_TECNOLOGIA.md  GERENCIAMENTO_USUARIOS.md  GUIA_BACKUP_RAPIDO.md  GUIA_INTERFACE.md  GUIA_RAPIDO.md  HISTORIA_VELOZ_FIBRA.md  INSTRUCOES.md  KIRO_INTEGRATION.md  Makefile  PASSO_A_PASSO_DEFINITIVO.md  PLANOS_ULTRA_VELOCIDADE.md  Procfile  README.md  README_COLABORADORES.md  README_REFATORADO.md  RESUMO_CORRECAO_USUARIOS.md  RESUMO_EDICAO_DOCUMENTOS.md  RESUMO_IMPLEMENTACAO_CONFIRMACAO.md  RESUMO_PDFS.md  RESUMO_REFATORACAO_DOCUMENTOS.md  RESUMO_REORGANIZACAO.md  RESUMO_SISTEMA_BACKUP_IMPLEMENTADO.md  SISTEMA_BACKUP.md  (+64 more)
.kiro/: config.json  health-report-2025-07-18.txt
.kiro/docs/: INDEX.md  README.md  TREINAMENTO_CDD.md  cdd-generator-prompt.md  cursorrules-exemplo.md  cursorrules-generator-prompt.md  cursorrules-prompt-direto.md  documentation-hierarchy.md  implementation-guide.md  patterns-exemplo.md  patterns-generator-prompt.md  patterns-prompt-direto.md  patterns-workflow.md  principles-and-best-practices.md  prompt-execucao-direto.md  template-structure.md  todo-list-prompt-guide.md  workflow-completo.md
.kiro/patterns/: README.md  conventions.md
.kiro/patterns/backend/: nodejs.md
.kiro/patterns/database/: postgresql.md
.kiro/patterns/examples/: react-component-example.tsx
.kiro/patterns/frontend/: components.md  react.md
.kiro/patterns/linting/: pyproject.toml
.kiro/scripts/: README.md  analyze-feedback.sh  backup-tasks.sh  check-patterns.js  collect-feedback.sh  dashboard.sh  full-dashboard.sh  generate-report.js  health-dashboard.sh  install.sh  metrics-code-quality.sh  metrics-completeness.sh  metrics-progress.sh  new-feature.sh  package-lock.json  package.json  quick-start.md  read-tasks.js  setup-cdd-integration.sh  task-manager.js  tasks-status.json  update-task.js  utils.js  validate-project.sh  validate-task-format.sh  watch.js  weekly-cleanup.sh
.kiro/specs/_template/: design.md  requirements.md  tasks.md
.kiro/specs/architecture-refactor/: README.md  design.md  requirements.md  tasks.md
.kiro/specs/documents-corporativos/: design.md  requirements.md  tasks.md
.kiro/specs/payment-gateway/: design.md  requirements.md  tasks.md
.kiro/specs/user-authentication/: tasks.md
.kiro/steering/: product.md  structure.md  tech.md
app/: __init__.py
app/core/: __init__.py  config.py  database.py
app/data/: activity_log.json  attachments.json  document_analytics.json  document_categories.json  document_versions.json  documents.json  notifications.json  pages.json  pdfs.json  sectors.json  users.json
app/modules/: __init__.py
app/modules/activity/: __init__.py  decorators.py  routes.py
app/modules/analytics/: __init__.py  routes.py
app/modules/auth/: __init__.py  routes.py
app/modules/auth/models/: __init__.py  user.py
app/modules/auth/repositories/: __init__.py  user_repository.py
app/modules/auth/services/: __init__.py  auth_service.py
app/modules/backup/: __init__.py  routes.py
app/modules/backup/models/: __init__.py  backup.py
app/modules/backup/repositories/: __init__.py  backup_repository.py
app/modules/backup/services/: __init__.py
app/modules/backup/validators/: __init__.py  backup_validator.py
app/modules/documents/: __init__.py  attachment_service.py  models.py  models_backup.py  repositories.py  routes.py  services.py  validators.py
app/modules/documents/repositories/: __init__.py  document_repository.py
app/modules/documents/services/: __init__.py  document_service.py
app/modules/main/: __init__.py  routes.py
app/modules/notifications/: __init__.py  routes.py
app/modules/pages/: __init__.py  routes.py
app/modules/pages/repositories/: page_repository.py
app/modules/pages/services/: page_service.py
app/modules/pdfs/: __init__.py  routes.py
app/modules/users/: __init__.py  routes.py
app/shared/: __init__.py  decorators.py  exceptions.py  utils.py
app/static/js/: attachments.js
app/static/uploads/: .gitkeep
app/templates/: admin_activity.html  admin_analytics.html  admin_backup.html  admin_notifications.html  admin_pdfs.html  admin_users.html  base.html  index.html  login.html  planos_veloz.html
app/templates/documents/: dashboard.html  edit.html  index.html  index_backup.html
app/templates/pages/: index.html
backups/: backups_info.json  wiki_veloz_backup_20250716_151152.zip.encrypted  wiki_veloz_backup_20250716_151207.zip.encrypted  wiki_veloz_backup_20250716_172724.zip.encrypted  wiki_veloz_backup_20250716_172725.zip.encrypted  wiki_veloz_backup_20250716_172836.zip.encrypted
components/: attachments.js  attachments_improved.js
constants/: app_constants.py
data/: activity_log.json  notifications.json  pages.json  users.json
pages/: routes.py
scripts/: setup.sh  start.sh
services/: activity_service.py  auth_service.py  backup_service.py  document_service.py
static/js/: attachments.js  attachments_improved.js
static/uploads/: .gitkeep
templates/: admin_activity.html  admin_backup.html  admin_notifications.html  admin_pdfs.html  admin_users.html  index.html  login.html
templates/documents/: dashboard.html  index.html  index_backup.html  index_corrupted.html
tests/: __init__.py  conftest.py  test_documents.py  test_documents_backup.py  test_google_drive.py  test_pdfs.py  test_users.py
